Добавил Jdbc-тесты